Add CI/CD pipeline configuration

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,4 +1,4 @@
-name: Flutter CI/CD Pipeline
+name: Flutter CI
 
 on:
   push:
@@ -10,6 +10,7 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +20,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.0.0' # Replace with the Flutter version you are using
+          flutter-version: '3.22.2'
 
       - name: Install dependencies
         run: flutter pub get
@@ -32,10 +33,9 @@ jobs:
 
       - name: Build iOS
         if: runner.os == 'macOS'
-        run: flutter build ios --release
-
-      - name: Archive build artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: build-artifacts
-          path: build/app/outputs/flutter-apk/app-release.apk
+        env:
+          XCODE_WORKSPACE: Runner.xcworkspace
+          XCODE_SCHEME: Runner
+          XCODE_CONFIGURATION: Release
+        run: |
+          flutter build ios --release --no-codesign
