--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -1,4 +1,4 @@
-name: Flutter ci
+name: Flutter CI
 
 on: [push]
 
@@ -7,5 +7,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout repository
-        uses: action/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
