--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -18,4 +18,7 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Build Andoid APK
+        run: flutter build apk --release
+
 
