--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,12 @@ dependencies:
   flutter_spinkit: ^5.2.1
   animated_text_kit: ^4.2.2
   flutter_dotenv: ^5.1.0
+  test:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
