--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: gem install fastlane
 
       - name: Build iOS App
-        run: flutter build ios --release
+        run: flutter build ios --no-codesign
 
       - name: Deploy to App Store
         run: fastlane ios deploy
