--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Install Ruby
+        run: sudo apt-get install ruby-full
+
+      - name: Install CocoaPods
+        run: sudo gem install cocoapods
+
       - name: Install CocoaPods dependencies
         run: |
           cd ios
