--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Match AppStore
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-          MATCH_GIT_TOKEN: ${{ secrets.MATCH_GIT_TOKEN }}
+          MATCH_GIT_BASIC_AUTH: "johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}"
         run: fastlane match appstore --git_url https://github.com/johnhcolani/fastlane-match-certificates.git
 
       - name: Create .env file
