--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Verify Environment Variables
         run: echo "MATCH_GIT_BASIC_AUTH is set to $MATCH_GIT_BASIC_AUTH"
         env:
-          MATCH_GIT_BASIC_AUTH: "johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}"
+          MATCH_GIT_BASIC_AUTH: "Basic $(echo -n 'johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}' | base64)"
 
       - name: Match AppStore
         run: fastlane match appstore --git_url https://github.com/johnhcolani/fastlane-match-certificates.git
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-          MATCH_GIT_BASIC_AUTH: "johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}"
+          MATCH_GIT_BASIC_AUTH: "Basic $(echo -n 'johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}' | base64)"
 
       - name: Create .env file
         run: |
