--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -26,16 +26,13 @@ jobs:
       - name: Install Fastlane
         run: gem install fastlane
 
-      - name: Verify Environment Variables
-        run: echo "MATCH_GIT_BASIC_AUTH is set to $MATCH_GIT_BASIC_AUTH"
-        env:
-          MATCH_GIT_BASIC_AUTH: "Basic $(echo -n 'johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}' | base64)"
+      - name: Setup Git for Fastlane Match
+        run: git config --global url."https://johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}@github.com".insteadOf "https://github.com"
 
       - name: Match AppStore
         run: fastlane match appstore --git_url https://github.com/johnhcolani/fastlane-match-certificates.git
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-          MATCH_GIT_BASIC_AUTH: "Basic $(echo -n 'johnhcolani:${{ secrets.MATCH_GIT_TOKEN }}' | base64)"
 
       - name: Create .env file
         run: |
