--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_dotenv: ^5.1.0
   test: ^1.25.2
+  sqflite: ^2.4.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
